--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "module": "es2022",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "start": "npm run build & node index.js"
   },
   "author": "",
   "license": "ISC",
